fix images not showing in certain devices

--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ i {
 
 body {
     background-color: var(--bg);
-    background-image: url(/images/cocoabg.webp);
+    background-image: url(images/cocoabg.webp);
     height: 100vh;
     height: 100dvh;
     background-position: center;
